--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,5 +6,7 @@
   "action": {
     "default_title": "Supreme trobot",
     "default_popup": "index.html"
-  }
+  },
+  "permissions": ["tabs", "activeTab", "scripting"],
+  "host_permissions": ["https://allegrolokalnie.pl/*"]
 }
