--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "scripts": {
-    "start": "snowpack build --watch",
-    "build": "snowpack build",
+    "start": "concurrently -k 'npm:build:app:watch' 'npm:build:content-scripts:watch'",
+    "build:app": "snowpack build",
+    "build:app:watch": "snowpack build --watch",
+    "build:content-scripts": "rollup -c",
+    "build:content-scripts:watch": "rollup -c --watch",
     "test": "web-test-runner \"src/**/*.test.ts\""
   },
   "dependencies": {
     "svelte": "^3.24.0"
   },
   "devDependencies": {
+    "@rollup/plugin-typescript": "^8.2.1",
     "@snowpack/plugin-dotenv": "^2.0.5",
     "@snowpack/plugin-svelte": "^3.5.0",
     "@snowpack/plugin-typescript": "^1.2.0",
@@ -19,8 +23,11 @@
     "@types/snowpack-env": "^2.3.2",
     "@web/test-runner": "^0.12.0",
     "chai": "^4.2.0",
+    "concurrently": "^6.0.0",
+    "rollup": "^2.44.0",
     "snowpack": "^3.0.1",
     "svelte-preprocess": "^4.0.8",
+    "tslib": "^2.1.0",
     "typescript": "^4.0.0"
   }
 }
