--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@rollup/plugin-alias": "^3.1.2",
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@rollup/plugin-typescript": "^8.2.1",
     "@snowpack/plugin-dotenv": "^2.0.5",
