--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,6 +9,9 @@
   },
   "permissions": ["tabs", "activeTab", "scripting"],
   "host_permissions": ["https://allegrolokalnie.pl/*", "https://olx.pl/*"],
+  "background": {
+    "service_worker": "service-worker.js"
+  },
   "content_scripts": [
     {
       "matches": ["https://allegrolokalnie.pl/*"],
