refactor: change the structure of commands, move included files

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,7 +10,7 @@
   "permissions": ["tabs", "activeTab", "scripting"],
   "host_permissions": ["https://allegrolokalnie.pl/*", "https://olx.pl/*"],
   "background": {
-    "service_worker": "service-worker-bundled.js"
+    "service_worker": "service-worker.js"
   },
   "content_scripts": [
     {
