--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       matrix:
         node: ["12", "14", "16"]
-    name: Build on node ${{ matrix.node }}
+    name: node ${{ matrix.node }}
     steps:
       - uses: actions/checkout@v2
       - name: Setup node
