chore: add missing environment variable
Building in GitHub Actions does not work without it.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,8 @@ jobs:
       matrix:
         node: ["12", "14", "16"]
     name: node ${{ matrix.node }}
+    env:
+      SNOWPACK_PUBLIC_EXTENSION_ID: "1234abcd"
     steps:
       - uses: actions/checkout@v2
       - name: Setup node
