--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,8 +8,6 @@ jobs:
       matrix:
         node: ["12", "14", "16"]
     name: node ${{ matrix.node }}
-    env:
-      SNOWPACK_PUBLIC_EXTENSION_ID: "1234abcd"
     steps:
       - uses: actions/checkout@v2
       - name: Setup node
@@ -19,4 +17,6 @@ jobs:
       - run: npm install
       - run: npm run check-types
       - run: npm run lint
+      - name: Create a .env file
+        run: cp .env.example .env
       - run: npm run build
