--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint src"
   },
   "dependencies": {
+    "redux": "^4.1.0",
     "rxjs": "^6.6.7",
     "svelte": "^3.24.0",
     "uuid": "^8.3.2"
