--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,17 +3,13 @@ on: push
 
 jobs:
   build:
-    runs-on: ubuntu-16.04
-    strategy:
-      matrix:
-        node: ["12", "14", "16"]
-    name: node ${{ matrix.node }}
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
       - name: Setup node
         uses: actions/setup-node@v2
         with:
-          node-version: ${{ matrix.node }}
+          node-version: 16
       - run: npm install
       - run: npm run format:check
       - run: npm run check-types
